ADO#9 F9: multi-user support with admin approval flow
- Replace single-user UserConfig with multi-user User entity (username, email, PIN hash, role ADMIN/USER, status PENDING/APPROVED/REJECTED)
- First registered user auto-promoted to ADMIN and APPROVED
- Subsequent users start as PENDING and require admin approval before login
- Add AdminController: list/filter/approve/reject/delete users
- JWT now embeds userId+role; JwtAuthFilter sets @AuthenticationPrincipal Long userId
- Subject and Todo entities scoped to user_id FK; all queries filter by userId
- Frontend: RegisterPage with pending-approval screen, AdminPage with filter tabs and user actions, AdminRoute guard, updated PinLogin with username field, updated Navbar with admin badge and Users link

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>